--- a/public/login.css
+++ b/public/login.css
@@ -5,7 +5,7 @@
 
 body {
   min-height: 90vh;                 
-  background-image: url("../Immagini/BackGround1.png"); 
+  background-image: url("./assets/BackGround1.png"); 
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
